--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -17,3 +17,24 @@ dev_dependencies:
 
 flutter:
   uses-material-design: true
+  fonts:
+    - family: NotoSansKR
+      fonts:
+          - asset: fonts/NotoSansKR-Thin.ttf
+            weight: 100
+          - asset: fonts/NotoSansKR-ExtraLight.ttf
+            weight: 200
+          - asset: fonts/NotoSansKR-Light.ttf
+            weight: 300
+          - asset: fonts/NotoSansKR-Regular.ttf
+            weight: 400
+          - asset: fonts/NotoSansKR-Medium.ttf
+            weight: 500
+          - asset: fonts/NotoSansKR-SemiBold.ttf
+            weight: 600
+          - asset: fonts/NotoSansKR-Bold.ttf
+            weight: 700
+          - asset: fonts/NotoSansKR-ExtraBold.ttf
+            weight: 800
+          - asset: fonts/NotoSansKR-Black.ttf
+            weight: 900
